# Garbage-Collector

./: Allocator.h  CMakeLists.txt  CmakeLists.txt  Garbage_collector.cpp  Garbage_collector.h  README.md  Vector.h  main.cpp
include/: Garbage_collector.h  Vector.h  base_table.h
src/: CMakeLists.txt  Vector.cpp  main.cpp
test/: CMakeLists.txt  test.cpp
